--- a/SLBr/WinUIStyleDictionary.xaml
+++ b/SLBr/WinUIStyleDictionary.xaml
@@ -1428,7 +1428,7 @@ Margin="{TemplateBinding Padding}"/>
             BorderBrush="{DynamicResource BorderBrush}"
             BorderThickness="1" CornerRadius="5">
                         <ScrollViewer CanContentScroll="True" Style="{StaticResource MenuScrollViewer}" Padding="0" Margin="5">
-                            <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle" />
+                            <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle"/>
                         </ScrollViewer>
                     </Border>
                 </Popup>
@@ -1643,7 +1643,7 @@ Margin="{TemplateBinding Padding}"/>
             <Trigger Property="Header" Value="Select All">
                 <Setter Property="Icon" Value="&#xe8b3;"/>
             </Trigger>
-            
+
             <Trigger Property="Icon" Value="{x:Null}">
                 <Setter TargetName="Icon" Property="Visibility" Value="Hidden"/>
             </Trigger>
@@ -1931,22 +1931,21 @@ Margin="{TemplateBinding Padding}"/>
     </Style>
 
     <Style TargetType="{x:Type GroupBox}">
-        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Background" Value="{DynamicResource SecondaryBrush}" />
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
-        <Setter Property="Background" Value="{DynamicResource PrimaryBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource FontBrush}"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type GroupBox}">
-                    <Border SnapsToDevicePixels="True" Background="{DynamicResource SecondaryBrush}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5">
+                    <Border SnapsToDevicePixels="True" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
-                            <Border Background="{TemplateBinding Background}" CornerRadius="5,5,0,0" SnapsToDevicePixels="True">
+                            <Border Background="{StaticResource PrimaryBrush}" CornerRadius="5,5,0,0" SnapsToDevicePixels="True">
                                 <Label SnapsToDevicePixels="True" Grid.Row="0" Foreground="{TemplateBinding Foreground}" Width="Auto" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
                                     <ContentPresenter SnapsToDevicePixels="True" Margin="5" ContentSource="Header" RecognizesAccessKey="True" TextBlock.Foreground="{TemplateBinding Foreground}"/>
                                 </Label>
@@ -1962,7 +1961,7 @@ Margin="{TemplateBinding Padding}"/>
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="GroupBox">
-                            <Border SnapsToDevicePixels="True" Background="{DynamicResource SecondaryBrush}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5">
+                            <Border SnapsToDevicePixels="True" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5">
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="*" />
